tests/integration/snapshots/integration__conformance__n_object_non_string_key.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
{1:1}
stderr ---
error: expected entry or closed delimiter `}`, found `1`
 --> stdin:1:2
  |
1 | {1:1}
  | -^
  | |
  | expected due to `{`
