tests/integration/snapshots/integration__conformance__n_object_repeated_null_null.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{null:null,null:null}
stdout ---

stderr ---
error: expected entry or closed delimiter `}`, found `null`
 --> stdin:1:2
  |
1 | {null:null,null:null}
  | -^^^^
  | |
  | expected due to `{`
